// This program has been developed by students from the bachelor Computer Science at Utrecht University within the Software and Game project course 2016 semester 2 & 2017 semester 2
// Â©Copyright Utrecht University (Department of Information and Computing Sciences)
syntax = "proto3";
package tors_proto;

// Time interval for indicating the start/end of something
message Interval {
    // Start time
    double start = 1;

    // End time
    double end = 2;
}


// A tasks that is scheduled under an employee
message ScheduledTask {
    // The start time of the task
    int32 startTime = 1;

    // The start location of the task
    int32 startLocationId = 2;

    // The end location of the task
    int32 endLocationId = 3;

    // The scheduled task
    Task task = 4;
}


message Task {
    // Type of the task
    string type = 1;

    // Priority of the task (0 when mandatory, non-zero otherwise)
    int32 priority = 2;
    // Duration of the task

    int32 duration = 3;

    // Skills required for the task
    repeated string requiredSkills = 4;
}
